// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mixes active and selected styles 1`] = `
<Option
  active={true}
  selected={true}
>
  <Text>
    <Text
      style={
        Object {
          "margin": 0,
        }
      }
    >
      <div
        className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-homxoj rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1b43r93 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
        dir="auto"
      >
        <div
          style={
            Object {
              "backgroundColor": undefined,
              "color": undefined,
              "cursor": "pointer",
              "display": "flex",
              "padding": NaN,
              "paddingLeft": NaN,
              "textAlign": "left",
            }
          }
        />
      </div>
    </Text>
  </Text>
</Option>
`;

exports[`renders active style 1`] = `
<Option
  active={true}
>
  <Text>
    <Text
      style={
        Object {
          "margin": 0,
        }
      }
    >
      <div
        className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-homxoj rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1b43r93 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
        dir="auto"
      >
        <div
          style={
            Object {
              "backgroundColor": undefined,
              "cursor": "pointer",
              "display": "flex",
              "padding": NaN,
              "paddingLeft": NaN,
              "textAlign": "left",
            }
          }
        />
      </div>
    </Text>
  </Text>
</Option>
`;

exports[`renders default style 1`] = `
<Option>
  <Text>
    <Text
      style={
        Object {
          "margin": 0,
        }
      }
    >
      <div
        className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-homxoj rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1b43r93 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
        dir="auto"
      >
        <div
          style={
            Object {
              "cursor": "pointer",
              "display": "flex",
              "padding": NaN,
              "paddingLeft": NaN,
              "textAlign": "left",
            }
          }
        />
      </div>
    </Text>
  </Text>
</Option>
`;

exports[`renders selected style 1`] = `
<Option
  selected={true}
>
  <Text>
    <Text
      style={
        Object {
          "margin": 0,
        }
      }
    >
      <div
        className="rn-borderTopWidth-13yce4e rn-borderRightWidth-fnigne rn-borderBottomWidth-ndvcnb rn-borderLeftWidth-gxnn5r rn-boxSizing-deolkf rn-color-homxoj rn-display-1471scf rn-font-1lw9tu2 rn-fontFamily-10u92zi rn-fontSize-1b43r93 rn-marginTop-1mnahxq rn-marginRight-61z16t rn-marginBottom-p1pxzi rn-marginLeft-11wrixw rn-paddingTop-wk8lta rn-paddingRight-9aemit rn-paddingBottom-1mdbw0j rn-paddingLeft-gy4na3 rn-textDecoration-bauka4 rn-whiteSpace-q42fyq rn-wordWrap-qvutc0"
        dir="auto"
      >
        <div
          style={
            Object {
              "color": undefined,
              "cursor": "pointer",
              "display": "flex",
              "padding": NaN,
              "paddingLeft": NaN,
              "textAlign": "left",
            }
          }
        />
      </div>
    </Text>
  </Text>
</Option>
`;
